Fix portrait layout on mobile

--- a/examples/css/browser.css
+++ b/examples/css/browser.css
@@ -21,7 +21,7 @@ body {
 @supports(padding: max(0px)) {
     .sidebar {
         padding-top: max(20px, env(safe-area-inset-top));
-        padding-right: 20px;
+        padding-right: max(20px, env(safe-area-inset-right));
         padding-bottom: max(20px, env(safe-area-inset-bottom));
         padding-left: max(20px, env(safe-area-inset-left));
     }
@@ -186,6 +186,8 @@ pre {
         max-height: 200px;
         border-bottom: 1px solid #ddd;
         border-right: none;
+        width: 100%;
+        min-width: 0;
     }
 
     #code-panel {
